--- a/saveone/package.json
+++ b/saveone/package.json
@@ -12,8 +12,12 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "express": "^4.18.2",
+    "mongodb": "^6.3.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
