--- a/saveone/package.json
+++ b/saveone/package.json
@@ -18,6 +18,7 @@
     "expo-status-bar": "~1.6.0",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
+    "mongoose": "^8.0.2",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
